# cookiecutter-toxbase

./: .gitignore  cookiecutter.json  reversion.toml  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: MANIFEST.in  Makefile  README.rst  requirements-dev.txt  reversion.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/test/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
